# video-shorts-generator

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml
.dvc/: config
config/: config_services.yaml
docs/: Makefile  conf.py  index.rst  overview.rst
test-standalone-utils/: scrap_coverage.py
vsg-models/vsg-clips/: Makefile  pyproject.toml
vsg-models/vsg-clips/vsg_clips/: clips_generator.py
vsg-models/vsg-clips/vsg_clips/generator/: snippets_generator.py
vsg-models/vsg-gen/: Makefile  pyproject.toml
vsg-models/vsg-gen/vsg_gen/: blog.py
vsg-models/vsg-gen/vsg_gen/blog/: llm_article.py
vsg-models/vsg-themes/: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini  vsg_themes.dockerfile
vsg-models/vsg-themes/tests/unit/: test_tfidf.py
vsg-models/vsg-themes/vsg_themes/: app.py  theme_extractor.py  utils.py  vsg_themes_route.py
vsg-models/vsg-themes/vsg_themes/analysis/: keywords.py  lexical_chain.py  lexical_chains.py  theme_keywords.py  theme_transformer.py
vsg-models/vsg-themes/vsg_themes/extract/: from_web.py
vsg-previewer/: Makefile  pyproject.toml
vsg-previewer/vsg_previewer/: app.py
vsg-previewer/vsg_previewer/static/: style.css
vsg-previewer/vsg_previewer/templates/: index.html
vsg-utils/: Makefile  README.md  pyproject.toml
vsg-utils/vsg_utils/: files.py  fs.py  vsg_api_schema.py
