[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vsg-previewer"
version = "0.1.0"
description = "Video Snippets Generator"
authors = ["Ricardo G. Sousa <ricardo@rsousa.co>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.10"
requests = "~2.31.0"
flask = "~3.0.2"



