[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vsg-themes"
version = "0.4.1"
description = "Video Snippets Generator"
authors = ["Ricardo G. Sousa <ricardo@rsousa.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
aiohttp = "~3.9.3"
beautifulsoup4 = "~4.12.3"
html5lib = "~1.1"
scikit-learn = "~1.4.1.post1"
nltk = "~3.8.1"
dvc = "~3.49.0"
transformers = "~4.39.3"
torch = "~2.2.0"
scipy = "~1.13.0"
vsg_utils = {path = "../../vsg-utils"}
fastapi = "~0.110.1"
uvicorn = "~0.29.0"
platformdirs = "~3"
dvc-s3 = "~3.1.0"
argparse = "~1.4.0"
fasttext-wheel = "~0.9.2"

[tool.poetry.group.dev.dependencies]
tox = "~4.11"
pytest = "~8.1"
coverage = "~7.5"
deepdiff = "~7.0.1"
markdownify = "~0.12"
lxml = "~5.2"

